delete all images, compressed, add in weibo icon, add in sponsors, cleaned up folders

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -21,13 +21,14 @@
 	       			<li><a href="/events/concessions">Concessions</a></li>
 	       			<li><a href="/events/mooncake_festival">Mooncake Festival</a></li>
 	       			<li><a href="/events/dumpling_night">Dumpling Night</a></li>
-	       			<li><a href="/events/hotpot_night">Hotpot Night</a></li>	 
+	       			<li><a href="/events/hotpot_night">Hot Pot Night</a></li>	 
 	       			<li><a href="/events/lunar_banquet">Lunar Banquet</a></li>     
 	       			<li><a href="/events/cfest">CFest</a></li>
 	       			<li><a href="/events/basketball_tournament">Basketball Tournament</a></li>	       			 		
 	       		</ul>
 	       	</li>
 	       	<li><a href="/contact">Contact</a></li>
+	       	<li><a href="/sponsors">Sponsors</a></li>
 	       	<li><a href="/register">Sign up</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
