--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -15,10 +15,8 @@
 <div class="container-fluid">
 <%= yield %>
 </div>
-<footer class="footer left">
-	<!-- <div class="container left"> -->
-	<p>Photos by Chester Lam</p>
-	<!-- </div> -->
+<footer class="footer left">	
+	<p>Photo by Chester Lam</p>	
 </footer>
 <%= render 'layouts/footer' %>
 </body>
