--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,12 @@
 	<%= render 'layouts/menu' %>
 </nav>
 <div class="container-fluid" id="bodyContent">
-	<div class="jumbotron">
-		 <%= image_tag("covers/#{@pageTitle}.jpg",:class => "img-responsive") %>
-	</div>
+	<%= if defined? @page_title 		
+			content_tag :div, :class => "jumbotron" do
+				 image_tag("covers/#{@page_title}.jpg",:class => "img-responsive") 	
+			end
+	 	end 
+	 %>
 	<div id="content">
 		<%= yield %>
 	</div>
@@ -24,7 +27,7 @@
 	<div class="container">
 		<p class="text-muted">
 			<span id="copyright">&copy; UMD Chinese Student Association 2015-2016</span> | 
-				<span id="social_media"><a href="https://www.facebook.com/UMCPCSA"><i class="fa fa-lg fa-facebook-official"></i></a><a href="https://twitter.com/umcpcsa"><i class="fa fa-lg fa-twitter-square"></i></a><a href="https://instagram.com/umcpcsa/"><i class="fa fa-lg fa-instagram"></i></a></span>
+				<span id="social_media"><a href="https://www.facebook.com/UMCPCSA"><i class="fa fa-lg fa-facebook-official"></i></a><a href="https://twitter.com/umcpcsa"><i class="fa fa-lg fa-twitter-square"></i></a><a href="https://instagram.com/umcpcsa/"><i class="fa fa-lg fa-instagram"></i></a><a href="#"><i class="fa fa-lg fa-weibo"></i></a></span>
 		</p>
 	</div>
 </footer>
