--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 	<div class="container">
 		<p class="text-muted">
 			<span id="copyright">&copy; UMD Chinese Student Association 2015-2016</span> | 
-				<span id="social_media"><a href="https://www.facebook.com/UMCPCSA"><i class="fa fa-lg fa-facebook-official"></i></a><a href="https://twitter.com/umcpcsa"><i class="fa fa-lg fa-twitter-square"></i></a><a href="https://instagram.com/umcpcsa/"><i class="fa fa-lg fa-instagram"></i></a><a href="#"><i class="fa fa-lg fa-weibo"></i></a></span>
+				<span id="social_media"><a href="https://www.facebook.com/UMCPCSA"><i class="fa fa-lg fa-facebook-official"></i></a><a href="https://twitter.com/umcpcsa"><i class="fa fa-lg fa-twitter-square"></i></a><a href="https://instagram.com/umcpcsa/"><i class="fa fa-lg fa-instagram"></i></a></span>
 		</p>
 	</div>
 </footer>
