--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -25,3 +25,4 @@ $font-family-sans-serif: 'Open Sans', sans-serif
 @import "fullcalendar"
 @import "static_pages"
 @import "events_page"
+@import "errors_page"
