AO FORM: set up auxiliary model

--- a/app/views/auxiliaries/new.html.erb
+++ b/app/views/auxiliaries/new.html.erb
@@ -22,7 +22,7 @@
 
     <label class="col-sm-2 control-label">Major:</label>
     <div class="col-sm-10">
-      <%= f.email_field :major, :required => true, :class => "form-control", :id => "major", :placeholder => "Major" %>
+      <%= f.text_field :major, :required => true, :class => "form-control", :id => "major", :placeholder => "Major" %>
     </div>
 
   </div>
@@ -31,7 +31,7 @@
 
     <label class="col-sm-2 control-label">Expected Semester of Graduation:</label>
     <div class="col-sm-10">
-      <%= f.email_field :expected_graduation, :required => true, :class => "form-control", :id => "email", :placeholder => "i.e. Winter 2015" %>
+      <%= f.text_field :expected_graduation, :required => true, :class => "form-control", :id => "email", :placeholder => "i.e. Winter 2015" %>
     </div>
 
   </div>
