--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -26,3 +26,4 @@ $font-family-sans-serif: 'Open Sans', sans-serif
 @import "static_pages"
 @import "events_page"
 @import "errors_page"
+@import "ao_index"
