--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -15,7 +15,7 @@
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700)
 @import "bootstrap-sprockets"
-$navbar-default-bg: transparent
+// $navbar-default-bg: transparent
 $navbar-height: 50px
 $font-family-sans-serif: 'Open Sans', sans-serif
 @import "bootstrap"
