--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -15,7 +15,14 @@
     <% if !defined? @hide_menu %>
       <ul class="nav navbar-nav navbar-right">
           <li><a href="#">AO Management</a></li>
-          <li><a href="#">Link 2</a></li>
+          <li><a href="/events/all">Events</a></li>
+          <!-- <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true" href="#">Events<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                  <li><a href="#">View all events</a></li>
+                  <li></li>
+              </ul>
+          </li> -->
       </ul>
     <% end %>
     </div><!-- /.navbar-collapse -->
