--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -15,7 +15,7 @@
     <% if !defined? @hide_menu %>
       <ul class="nav navbar-nav navbar-right">
           <li><a href="#">AO Management</a></li>
-          <li><a href="/events/all">Events</a></li>
+          <li><a href="/admin/events/all">Events</a></li>
           <!-- <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true" href="#">Events<span class="caret"></span></a>
               <ul class="dropdown-menu">
