--- a/app/views/auxiliaries/index.html.erb
+++ b/app/views/auxiliaries/index.html.erb
@@ -1,4 +1,8 @@
-<div id = "ao-table">
+<div>
+  <p>The AO system allows anyone who is interested in being involved in CSA the opportunity to understand how we work. As an AO, you help out with setting up events and provide feedback on the ones that you attend. It helps us to improve our events and also lets you experience the process we go through to plan all of our wonderful GBMs. You also get to be around the board other AOs more often, which we think is pretty awesome!</p> 
+</div>
+
+<div id = "ao-table" style="overflow-y: auto; height: 75vh;">
   <table class = "table table-bordered" >
     <tr>
       <th class="col-md-3">Name</th>
@@ -7,9 +11,9 @@
     </tr>
     <% @auxiliaries.each do |auxiliary| %>
       <tr>
-        <td class="col-md-3">auxiliary.name</td>
-        <td class="col-md-3">auxiliary.major</td>
-        <td class="col-md-3">auxiliary.expected_graduation</td>
+        <td class="col-md-3"><%= auxiliary.name %></td>
+        <td class="col-md-3"><%= auxiliary.major %></td>
+        <td class="col-md-3"><%= auxiliary.expected_graduation %></td>
       </tr>
     <% end %>
   </table>
