--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -13,6 +13,13 @@
       </div>
       <div class="collapse navbar-collapse" id="menuBar">
         <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true" href="#">About<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "E-Board", about_path %></li>
+              <li><%= link_to "AOs", ao_index_path %></li>
+            </ul>
+          </li>
           <li><a href="/about">About</a></li>
           <li><a href="/calendar">Calendar</a></li>
           <li class="dropdown">
