--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -17,7 +17,7 @@
             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true" href="#">About<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "E-Board", about_path %></li>
-              <li><%= link_to "AOs", ao_index_path %></li>
+              <li><%= link_to "AOs", auxiliaries_path %></li>
             </ul>
           </li>
           <li><a href="/calendar">Calendar</a></li>
