added in ao photo and some text on sponsors

--- a/app/views/static_pages/sponsors.html.erb
+++ b/app/views/static_pages/sponsors.html.erb
@@ -1,6 +1,18 @@
 <div class="title">
-	<h1>Sponsors Page</h1>
+	<h1>Verizon's International Student Program</h1>
 </div>
 <div id="sponsorsContent">
-	<p>Information about sponsors</p>
+	<p><b>Verizon's International Student Program</b><br />
+		Welcome to the University of Maryland! This year, CSA is partnering with Verizon (insert more text)
+	</p>
+
+
+
+
+
+	<p><b>关于Verizon International Student Program</b><br />
+欢迎来到University of Maryland！加入全美最大最可靠的4G LTE网络，办理为你量身打造的#Verizon International Student Program#，随时与朋友家人保持紧密联系。限时优惠，回收旧手获享$200折旧换新退款，开新号无需押金，简单申请（带上护照和留学签证即可）。更多详情，请前往Verizon门店咨询（10250 Baltimore Avenue College Park, MD 20740）
+<br />
+<b>关于“新生办手机购物之旅”</b><br />
+初到美国，想办手机及购物？跟我们一同前往全美最大最可靠的4G LTE网络#Verizon# 门店了解更多关于#Verizon International Student Program#的优惠详情，挑选最潮最新款的手机。限时优惠，回收旧手获享$200折旧换新退款，开新号无需押金，简单申请（带上护照和留学签证即可）。现在就加入X月X日的新生办手机购物之旅，(报名详情).</p>
 </div>
