initial commit with menu

--- a/app/assets/javascripts/static_pages.coffee.erb
+++ b/app/assets/javascripts/static_pages.coffee.erb
@@ -1,4 +1,5 @@
 ready = ->	
+	$(".button-collapse").sideNav();
 	# index page text slide in
 	$("#welcome").delay(300).slideDown(500);
 	$("#csa").delay(800).slideDown(500);
