--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -12,12 +12,14 @@
  *
  *= require_self
  */
-
+//= require material_icons
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700)
 @import "bootstrap-sprockets"
 $navbar-default-bg: transparent
 $navbar-height: 100px
 $font-family-sans-serif: 'Open Sans', sans-serif
 @import "bootstrap"
+@import "materialize/components/color"
+@import "materialize"
 @import "vegas"
 @import "index_page"
