--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -9,10 +9,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body id="homePage">
-<nav class="navbar navbar-default" id="indexBar">
+<nav id="indexBar">
 	<%= render 'layouts/menu' %>
 </nav>
-<div class="container-fluid">
+<div class="container">
 <%= yield %>
 </div>
 <footer class="footer left">	
