--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,46 +1,16 @@
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuBar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">
-          <%= image_tag('logo.png', size: '40x40') %>
-        </a>
-      </div>
-      <div class="collapse navbar-collapse" id="menuBar">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true" href="#">About<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "E-Board", about_path %></li>
-              <li><%= link_to "AOs", auxiliaries_path %></li>
-            </ul>
-          </li>
-          <li><a href="/calendar">Calendar</a></li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true" href="#">Events<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="/events/concessions">Concessions</a></li>
-              <li><a href="/events/mooncake_festival">Mooncake Festival</a></li>
-              <li><a href="/events/dumpling_night">Dumpling Night</a></li>
-              <li><a href="/events/hotpot_night">Hot Pot Night</a></li>  
-              <li><a href="/events/lunar_banquet">Lunar Banquet</a></li>     
-              <li><a href="/events/cfest">CFest</a></li>
-              <li><a href="/events/basketball_tournament">Basketball Tournament</a></li>                  
-            </ul>
-          </li>
-          <li><a href="/contact">Contact</a></li>
-          <li><a href="/sponsors">Sponsors</a></li>
-          <li><a href="/register">Sign up</a></li>
-          <% if admin_signed_in? %>
-            <li><%= link_to "Admin Logout", destroy_admin_session_path, :method => :delete %></li>
-          <% else %>
-            <li><%= link_to "Admin Login", new_admin_session_path, :method => :get %></li>
-          <% end %>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-   </div>
+<div class="nav-wrapper">
+	<a href="/" class="brand-logo">
+		<%= image_tag('logo.png', size: '40x40') %>
+	</a>
+	<a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
+	<ul id="regular-nav" class="right hide-on-med-and-down">
+		<li><a href="#">Link 1</a></li>
+		<li><a href="#">Link 2</a></li>
+		<li><a href="#">Link 3</a></li>
+	</ul>
+	<ul class="side-nav" id="mobile-menu">
+		<li><a href="#">Link 1</a></li>
+		<li><a href="#">Link 2</a></li>
+		<li><a href="#">Link 3</a></li>
+	</ul>
+</div>
