--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -11,6 +11,8 @@
  * file per style scope.
  *
  *= require_self
+ //= require foundation_and_overrides
+
  */
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700)
