--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,16 +1,37 @@
-<div class="nav-wrapper">
-	<a href="/" class="brand-logo">
-		<%= image_tag('logo.png', size: '40x40') %>
-	</a>
-	<a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
-	<ul id="regular-nav" class="right hide-on-med-and-down">
-		<li><a href="#">Link 1</a></li>
-		<li><a href="#">Link 2</a></li>
-		<li><a href="#">Link 3</a></li>
+<nav class="top-bar" id="indexBar" data-topbar role="navigation">
+	<ul class="title-area">
+		<li class="name">
+			<a href="/">
+				<%= image_tag('logo.png', size: '40x40') %>
+			</a>
+		</li>
+		<li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
 	</ul>
-	<ul class="side-nav" id="mobile-menu">
-		<li><a href="#">Link 1</a></li>
-		<li><a href="#">Link 2</a></li>
-		<li><a href="#">Link 3</a></li>
-	</ul>
-</div>
+	<section class="top-bar-section">
+		<ul class="right">
+			<li class="has-dropdown">
+				<a href="#">About</a>
+				<ul class="dropdown">
+					<li><%= link_to "E-Board", about_path %></li>
+					<li><%= link_to "AOs", auxiliaries_path %></li>
+				</ul>
+			</li>
+			<li><a href="/calendar">Calendar</a></li>
+			<li class="has-dropdown">
+				<a href="#">Events</a>
+				<ul class="dropdown">
+					<li><a href="/events/concessions">Concessions</a></li>
+					<li><a href="/events/mooncake_festival">Mooncake Festival</a></li>
+					<li><a href="/events/dumpling_night">Dumpling Night</a></li>
+					<li><a href="/events/hotpot_night">Hot Pot Night</a></li>  
+					<li><a href="/events/lunar_banquet">Lunar Banquet</a></li>     
+					<li><a href="/events/cfest">CFest</a></li>
+					<li><a href="/events/basketball_tournament">Basketball Tournament</a></li>
+				</ul>
+			</li>
+			<li><a href="/contact">Contact</a></li>
+			<li><a href="/sponsors">Sponsors</a></li>
+			<li><a href="/register">Sign up</a></li>
+		</ul>
+	</section>
+</nav>
