--- a/app/assets/stylesheets/index_page.scss.erb
+++ b/app/assets/stylesheets/index_page.scss.erb
@@ -2,6 +2,7 @@ html {
 	min-width: 100%;
 	min-height: 100%;
 	position: relative;
+	overflow-x: hidden;
 }
 body {
 		background: image-url('home_background.jpg') no-repeat center center fixed;
@@ -21,7 +22,7 @@ nav#indexBar {
 	}
 }
 div#welcome_intro {	
-	width: 60%;
+	width: 1025px;
 	height: 120px;
 	margin: auto;
 	position: absolute;
@@ -41,6 +42,7 @@ div#welcome_intro {
 		text-shadow: 2px 2px #181818;
 	}
 }
+
 // html {
 // 	min-width: 100%;
 // 	position: relative;
