--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
 <div id="welcome_intro">
-	<span id="welcome">University of Maryland's</span>
-	<span id="csa">CHINESE STUDENT ASSOCIATION</span>
+	<h3 id="welcome">University of Maryland</h3>
+	<h1 id="csa">CHINESE STUDENT ASSOCIATION</h1>
 </div>
