--- a/app/views/static_pages/sponsors.html.erb
+++ b/app/views/static_pages/sponsors.html.erb
@@ -2,9 +2,11 @@
 	<h1>Verizon's International Student Program</h1>
 </div>
 <div id="sponsorsContent">
-	<p><b>Verizon's International Student Program</b><br />
-		Welcome to the University of Maryland! This year, CSA is partnering with Verizon (insert more text)
-	</p>
+	<p><b>About Verizon's International Student Program</b><br />
+	Welcome to campus! Stay in touch with family and friends on #Verizon's International Student Plan, created just for you. No deposit required. Simple signup. And, between now and 8/31, get $200 back for trading in your phone. Find out more at verizonwireless.com/landingpages/international-student or visit the Verizon store at <b>10250 Baltimore Avenue College Park, MD 20740</b> <br />
+	<b>About Shopping Trip</b><br />
+
+	Need to get some shopping done? Want to swing by the #Verizon store to learn about the International Student Plan and check out the latest smartphones? No deposit required. Simple signup. Bring your international passport and student visa. Join us on (DATE) for a group trip to 2818 Broadway, New York, NY 10025. Sign up details.</p>
 
 
 
