--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -16,6 +16,7 @@
       <ul class="nav navbar-nav navbar-right">
           <li><a href="#">AO Management</a></li>
           <li><a href="/admin/events/all">Events</a></li>
+          <li><%= link_to "Admin Logout", destroy_admin_session_path, :method => :delete %></li>
           <!-- <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true" href="#">Events<span class="caret"></span></a>
               <ul class="dropdown-menu">
