--- a/app/assets/stylesheets/index_page.scss.erb
+++ b/app/assets/stylesheets/index_page.scss.erb
@@ -9,7 +9,7 @@ $footerHeight: 20px;
 body {
 	padding-bottom: $footerHeight;
 	// overflow-x: hidden;
-	background: image-url('home_background.jpg') no-repeat center center fixed;
+	background: image-url('home_background2.jpg') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
