change dropdown menu looks

--- a/app/assets/stylesheets/index_page.scss.erb
+++ b/app/assets/stylesheets/index_page.scss.erb
@@ -70,14 +70,15 @@ nav#indexBar{
 	}
 	ul.dropdown-menu {
 		padding: 0;
+		background-color: rgba(0, 0, 0, 0.22);
 		li {
 			a {
-				color: #343434;
+				color: #FFF;
 				font-size: 18px;				
 			}
 			a:hover {
-				background: #101010;
-				color: #FFF;
+				background: #FFFFFF;
+				color: #4E4E4E;
 				text-decoration: none;
 			}
 		}
