ao management completed

--- a/app/views/admin/ao_dashboard.html.erb
+++ b/app/views/admin/ao_dashboard.html.erb
@@ -1,4 +1,4 @@
-<div id = "ao-table" style="overflow-y: auto; height: 75vh;">
+<div id = "ao-table">
 
   <table class = "table table-bordered" >
     <tr class = "row-fluid">
