--- a/app/views/auxiliaries/create.html.erb
+++ b/app/views/auxiliaries/create.html.erb
@@ -1,3 +1,3 @@
 <h2> Congratulations! </h2>
 <p> You have successfully submitted an AO Application. </p>
-<%= link_to "Back to Home Page", root_path %>
+<%= link_to "Home", root_path %>
