--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -12,12 +12,13 @@
         </a>
       </div>
       <div class="collapse navbar-collapse" id="menuBar">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right">          
+          <li><%= link_to "About Us", about_path %></li>
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true" href="#">About<span class="caret"></span></a>
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true" href="#">AO<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "E-Board", about_path %></li>
-              <li><%= link_to "AOs", auxiliaries_path %></li>
+              <li><%= link_to "About AOs", auxiliaries_path %></li>
+              <li><%= link_to "Sign up", new_auxiliary_path %></li>
             </ul>
           </li>
           <li><a href="/calendar">Calendar</a></li>
