--- a/app/assets/stylesheets/index_page.scss.erb
+++ b/app/assets/stylesheets/index_page.scss.erb
@@ -1,3 +1,4 @@
+//= depend_on_asset "home_background2.jpg"
 html {
 	min-width: 100%;
 	position: relative;
@@ -5,52 +6,20 @@ html {
 	overflow-x: hidden;
 	overflow-y: hidden;
 }
+@media (max-width: 768px) {
+	html {
+		overflow-y: scroll;
+	}
+}
 $footerHeight: 20px;
 body {
 	padding-bottom: $footerHeight;
 	// overflow-x: hidden;
-	background: image-url('home_background2.jpg') no-repeat center center fixed;
+	background: url('<%= asset_path("home_background2.jpg") %>') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-}
-@media (max-width: 1025px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin: 7.5px -15px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .navbar-text {
-        float: none;
-        margin: 15px 0;
-    }
-    /* since 3.1.0 */
-    .navbar-collapse.collapse.in { 
-        display: block!important;
-    }
-    .collapsing {
-        overflow: hidden!important;
-    }
 }
 nav#indexBar{
 	li{
@@ -69,8 +38,12 @@ nav#indexBar{
 		}		
 	}
 	ul.dropdown-menu {
+		// padding:-30px 0 0 0;
 		padding: 0;
-		background-color: rgba(0, 0, 0, 0.22);
+		margin: -30px 0 0 0;
+		background-color: rgba(255, 255, 255, 0.15);
+		padding: 10px 0;
+		border-radius: 2px;		
 		li {
 			a {
 				color: #FFF;
@@ -84,6 +57,9 @@ nav#indexBar{
 		}
 		
 	}
+	// div.navbar-collapse.collapse.in {
+	// 	background: rgba(255, 255, 255, 0.28);
+	// }
 }
 .navbar-brand {
 	padding-top: 10px;
@@ -94,11 +70,11 @@ nav#indexBar{
 }
 
 div#welcome_intro {
-	max-width: 70%;
+	max-width: 100%;
 	// width: 0%;
 	margin: 0 auto;
 	margin-top: 15%;	
-	text-align: left;
+	text-align: center;
 	position: relative;	
 	h3#welcome {
 		font-size: 40px;
@@ -113,91 +89,63 @@ div#welcome_intro {
 		text-shadow: 2px 2px #181818;
 		display: none;
 		color: #FFF;
-	}
-	// text-align: center;
-	// h1, h3 {
-		// 	color: #FFF;
-		// }
-		// h3 {
-			// 	font-size: 40px;
-			// 	margin-bottom: 0;
-			// 	display: none;	
-			// 	width: 50%;
-			// 	// text-align: left;	
-			// }
-			// h1 {
-				// 	font-weight: 700;
-				// 	font-size: 72px;
-				// 	text-decoration: underline;
-				// 	margin-top: 0px;
-				// 	display: none;
-				// }
+	}	
+}
+@media(max-width: 768px) {	
+	nav#indexBar {
+		.navbar-right {
+			margin-top: 0;
+			margin-bottom: 0;
+			a {
+				font-size: 20px;
 			}
-			// @media(max-width: 980px) {
-				// 	div#welcome_intro {
-					// 		text-align: left;
-					// 		h3 {
-						// 			width: 80%;
-						// 		}
-						// 		h1 {
-
-							// 		}
-							// 	}
-							// }
-							@media(max-width: 768px) {	
-								nav#indexBar {
-									.navbar-right {
-										margin-top: 0;
-										margin-bottom: 0;
-										a {
-											font-size: 20px;
-										}
-									}
-									ul.dropdown-menu {
-										li {
-											a {
-												color: #FFF;
-												font-size: 18px;
-												font-weight: bold;
-											}
-										}
-									}
-								}
-								a.navbar-brand {
-									margin-top: 15px;
-									img {
-										height: 50px;
-										width: 50px;
-									}
-								}
-								div#welcome_intro {
-									// text-align: left;
-									// width: 80%;
-									// margin-left: 0px; 
-									// padding-right: 20px;
-									max-width: 90%;
-									h3#welcome {
-										font-size: 25px;
-										width: 80%;
-										padding-left: 0;
-									}
-									h1#csa {
-										margin-top: 10px;
-										font-size: 40px;
-									}
-								}
+		}
+		ul.dropdown-menu {
+			margin: 0;
+			li {
+				a {
+					color: #FFF;
+					font-size: 18px;
+					// font-weight: bold;
+				}
+			}
+		}
+	}
+	a.navbar-brand {
+		margin-top: 15px;
+		img {
+			height: 50px;
+			width: 50px;
+		}
+	}
+	div#welcome_intro {
+		text-align: left;
+		// width: 80%;
+		// margin-left: 0px; 
+		// padding-right: 20px;
+		max-width: 90%;
+		h3#welcome {
+			font-size: 25px;
+			width: 80%;
+			padding-left: 0;
+		}
+		h1#csa {
+			margin-top: 10px;
+			font-size: 40px;
+		}
+	}
 
 
-							}
+}
 
-							footer {
-								position: absolute;
-								bottom: 0;
-								height: $footerHeight;			
-								min-width: 100%;
-								line-height: $footerHeight;
-								p {
-									color: #FFF;
-									padding-left: 10px;
-								}
-							}
+footer {
+	position: absolute;
+	bottom: 0;
+	height: $footerHeight;			
+	min-width: 100%;
+	line-height: $footerHeight;
+	p {
+		color: #FFF;
+		padding-left: 10px;
+	}
+}
