--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -42,9 +42,12 @@ div.navbar-header {
 	padding-top: 5px;
 	padding-bottom: 0;	
 }
-@media(max-width: 700px) {
+@media(max-width: 400px) {
 	span#credit {
 		display: none;
+	}
+	span#social_media {
+		float: none !important;
 	}
 }
 nav#otherPagesBar {
