--- a/app/views/static_pages/sponsors.html.erb
+++ b/app/views/static_pages/sponsors.html.erb
@@ -4,9 +4,9 @@
 <div id="sponsorsContent" class="row">
 	<div id="moreDetails" class="col-md-8">
 		<p><b><span class="small_title">About Verizon's International Student Program</span></b><br />
-			Welcome to campus! Stay in touch with family and friends on #Verizon's International Student Plan, created just for you. No deposit required. Simple signup. And, between now and 8/31, get $200 back for trading in your phone. Find out more <a href="www.verizonwireless.com/landingpages/international-student">here</a> or visit the Verizon store at 10250 Baltimore Avenue College Park, MD 20740 <br />
+			Welcome to campus! Stay in touch with family and friends on #Verizon's International Student Plan, created just for you. No deposit required. Simple signup. And, between now and 8/31, get $200 back for trading in your phone. Find out more <a href="www.verizonwireless.com/landingpages/international-student">here</a> or visit the Verizon store at 10250 Baltimore Avenue College Park, MD 20740.<br />
 			<b><span class="small_title">About Shopping Trip</span></b><br />
-			Need to get some shopping done? Want to swing by the #Verizon store to learn about the International Student Plan and check out the latest smartphones? No deposit required. Simple signup. Bring your international passport and student visa. Join us on August 27th/28th for a group trip to 2818 Broadway, New York, NY 10025. Email <a href="mailto:csacollegepark@gmail.com">csacollegepark@gmail.com</a> for more details.</p>
+			Need to get some shopping done? Want to swing by the #Verizon store to learn about the International Student Plan and check out the latest smartphones? No deposit required. Simple signup. Bring your international passport and student visa. Join us on August 27th/28th for a group trip to 10250 Baltimore Avenue College Park, MD 20740. Email <a href="mailto:csacollegepark@gmail.com">csacollegepark@gmail.com</a> for more details.</p>
 			<p><b><span class="small_title">关于Verizon International Student Program</span></b><br />
 				欢迎来到University of Maryland！加入全美最大最可靠的4G LTE网络，办理为你量身打造的#Verizon International Student Program#，随时与朋友家人保持紧密联系。限时优惠，回收旧手获享$200折旧换新退款，开新号无需押金，简单申请（带上护照和留学签证即可）。更多详情，请前往Verizon门店咨询（10250 Baltimore Avenue College Park, MD 20740）
 				<br />
