--- a/app/views/registers/new.html.erb
+++ b/app/views/registers/new.html.erb
@@ -1,7 +1,7 @@
 <div class="title">
 <h1>Sign Up!</h1>
-<p>Welcome! Fill out this form and you'll automatically be included in our listserv so you can get all our exciting news and announcements!</p>
-<p>Please select your shirt size when you register. We will soon send out an email telling you when and where you pick up the shirt. Please bring $10!</p>
+<p>Welcome! Fill out this form and you'll automatically be included in our listserv emails so you can get all our exciting news and announcements!</p>
+<p>Please select your shirt size when you register. The tshirt cost will be $10 and we'll soon send out an email telling you where you can pick it up!</p>
 <p>After you register here, please don't forget to sign up on <a href="https://orgsync.com/64457/chapter">OrgSync</a>!</p>
 </div>
 <%= form_for(:register, :html => {class: "form-horizontal", :id=>"addNew"}) do |f| %>
